--- a/package.json
+++ b/package.json
@@ -4,15 +4,14 @@
   "description": "Visual regression monitoring for websites",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "check": "node check-sites.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "cloudinary": "^1.41.0",
     "express": "^4.18.2",
     "node-cron": "^3.0.3",
     "pixelmatch": "^5.3.0",
-    "playwright": "^1.40.0",
+    "puppeteer": "^21.6.0",
     "pngjs": "^7.0.0",
     "uuid": "^9.0.0"
   },
