Switch to ScreenshotOne API

--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,3 @@
-# render.yaml - Render Blueprint specification
 services:
   - type: web
     name: site-visual-monitor
@@ -9,8 +8,6 @@ services:
     envVars:
       - key: NODE_ENV
         value: production
-      - key: PUPPETEER_SKIP_CHROMIUM_DOWNLOAD
-        value: "false"
       - key: CHECK_SCHEDULE
         value: "0 */6 * * *"
       - key: CLOUDINARY_CLOUD_NAME
@@ -18,4 +15,6 @@ services:
       - key: CLOUDINARY_API_KEY
         sync: false
       - key: CLOUDINARY_API_SECRET
+        sync: false
+      - key: SCREENSHOTONE_API_KEY
         sync: false
