--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "site-visual-monitor",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Visual regression monitoring for websites",
   "main": "server.js",
   "scripts": {
@@ -11,9 +11,7 @@
     "express": "^4.18.2",
     "node-cron": "^3.0.3",
     "pixelmatch": "^5.3.0",
-    "puppeteer": "^21.6.0",
-    "pngjs": "^7.0.0",
-    "uuid": "^9.0.0"
+    "pngjs": "^7.0.0"
   },
   "engines": {
     "node": ">=18"
